@@ -77,15 +77,31 @@
               </packing>
             </child>
             <child>
-              <object class="GtkToolButton" id="AddObjectButton">
+              <object class="GtkToolButton" id="AddMemberButton">
                 <property name="visible">True</property>
                 <property name="sensitive">False</property>
                 <property name="can_focus">False</property>
-                <property name="tooltip_text" translatable="yes">Add object to animation.</property>
-                <property name="label" translatable="yes">AddObjectButton</property>
+                <property name="tooltip_text" translatable="yes">Add member to animation.</property>
+                <property name="label" translatable="yes">Add Member</property>
                 <property name="use_underline">True</property>
                 <property name="stock_id">gtk-add</property>
-                <signal name="clicked" handler="on_add_object" swapped="no"/>
+                <signal name="clicked" handler="on_add_member" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="homogeneous">True</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkToolButton" id="RemoveMemberButton">
+                <property name="visible">True</property>
+                <property name="sensitive">False</property>
+                <property name="can_focus">False</property>
+                <property name="tooltip_text" translatable="yes">Remove animation, member or interpolator.</property>
+                <property name="label" translatable="yes">Remove Member</property>
+                <property name="use_underline">True</property>
+                <property name="stock_id">gtk-remove</property>
+                <signal name="clicked" handler="on_remove_member" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -107,6 +123,7 @@
                 <property name="visible">True</property>
                 <property name="sensitive">False</property>
                 <property name="can_focus">False</property>
+                <property name="tooltip_text" translatable="yes">Cut selected keyframes.</property>
                 <property name="label" translatable="yes">toolbutton4</property>
                 <property name="use_underline">True</property>
                 <property name="stock_id">gtk-cut</property>
@@ -122,6 +139,7 @@
                 <property name="visible">True</property>
                 <property name="sensitive">False</property>
                 <property name="can_focus">False</property>
+                <property name="tooltip_text" translatable="yes">Copy selected keyframes.</property>
                 <property name="label" translatable="yes">toolbutton5</property>
                 <property name="use_underline">True</property>
                 <property name="stock_id">gtk-copy</property>
@@ -137,6 +155,7 @@
                 <property name="visible">True</property>
                 <property name="sensitive">False</property>
                 <property name="can_focus">False</property>
+                <property name="tooltip_text" translatable="yes">Paste overlay at current time.</property>
                 <property name="label" translatable="yes">toolbutton6</property>
                 <property name="use_underline">True</property>
                 <property name="stock_id">gtk-paste</property>
@@ -178,6 +197,7 @@
                 <property name="visible">True</property>
                 <property name="sensitive">False</property>
                 <property name="can_focus">False</property>
+                <property name="tooltip_text" translatable="yes">Toggle between play and pause.</property>
                 <property name="label" translatable="yes">Play/Pause</property>
                 <property name="use_underline">True</property>
                 <property name="stock_id">gtk-media-play</property>
@@ -325,7 +345,9 @@
                         <signal name="draw" handler="on_tree_view_draw" swapped="no"/>
                         <signal name="row-activated" handler="on_row_activated" swapped="no"/>
                         <child internal-child="selection">
-                          <object class="GtkTreeSelection" id="treeview-selection"/>
+                          <object class="GtkTreeSelection" id="TreeViewSelection">
+                            <signal name="changed" handler="on_tree_view_selection_changed" swapped="no"/>
+                          </object>
                         </child>
                         <child>
                           <object class="GtkTreeViewColumn" id="NameColumn">
