@@ -11,7 +11,7 @@
   </object>
   <object class="GtkWindow" id="Window">
     <property name="can_focus">False</property>
-    <property name="title" translatable="yes">Paint Polygons</property>
+    <property name="title" translatable="yes">Texture Mapping</property>
     <property name="destroy_with_parent">True</property>
     <property name="type_hint">dialog</property>
     <property name="skip_taskbar_hint">True</property>
