@@ -1,3 +1,12 @@
+2014-12-10  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* AnimationEditor.xml:
+	* AnimationEditor.h:
+	* AnimationEditor.cpp:
+	* TextureCoordinateEditor.xml:
+	* X3DAnimationEditorInterface.h:
+	* X3DAnimationEditorInterface.cpp: 
+
 2014-12-09  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* ViewpointEditor.h:
